[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Fonts/Raleway-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Piano/Scripts/Instrument_Selection.gd" type="Script" id=2]
[ext_resource path="res://Piano/Scripts/Mute.gd" type="Script" id=3]
[ext_resource path="res://Piano/Scripts/Play_Button.gd" type="Script" id=4]
[ext_resource path="res://Piano/Scripts/Record_Button.gd" type="Script" id=5]
[ext_resource path="res://Piano/Scripts/Compass_Control.gd" type="Script" id=6]
[ext_resource path="res://Piano/Scenes/Table.tscn" type="PackedScene" id=7]
[ext_resource path="res://Piano/Scripts/Change_Screen_Button.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.643137, 0.643137, 0.643137, 1 )

[sub_resource type="DynamicFont" id=2]
size = 49
outline_size = 1
outline_color = Color( 0.376471, 0.376471, 0.376471, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 1 )

[node name="Piano" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Division" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DivH" type="HBoxContainer" parent="Division"]
margin_right = 1024.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
custom_constants/separation = 0

[node name="Dead_Zone" type="Label" parent="Division/DivH"]
margin_right = 85.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Division/DivH"]
margin_left = 85.0
margin_right = 938.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GL Studio"
align = 1
valign = 1

[node name="Change_Screen_Button" type="Button" parent="Division/DivH"]
margin_left = 938.0
margin_right = 1024.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = ">>"
script = ExtResource( 8 )

[node name="Time_Line" type="ScrollContainer" parent="Division"]
margin_top = 82.0
margin_right = 1024.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Table" parent="Division/Time_Line" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1067.0
margin_bottom = 680.0

[node name="Sets" type="MarginContainer" parent="Division"]
margin_top = 480.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Div" type="HBoxContainer" parent="Division/Sets"]
margin_right = 1024.0
margin_bottom = 120.0
custom_constants/separation = 8

[node name="Play_Button" type="Button" parent="Division/Sets/Div"]
margin_right = 183.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/pressed = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_constants/hseparation = 0
toggle_mode = true
text = "Play"
script = ExtResource( 4 )

[node name="Compass_Control" type="HSlider" parent="Division/Sets/Div"]
margin_left = 191.0
margin_right = 374.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 40.0
max_value = 240.0
value = 60.0
script = ExtResource( 6 )

[node name="BPMs" type="Label" parent="Division/Sets/Div"]
margin_left = 382.0
margin_right = 449.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
custom_fonts/font = SubResource( 6 )
text = "60 BPMs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record_Button" type="Button" parent="Division/Sets/Div"]
margin_left = 457.0
margin_right = 640.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Gravar"
script = ExtResource( 5 )

[node name="Mute" type="CheckBox" parent="Division/Sets/Div"]
margin_left = 648.0
margin_right = 831.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Mutar Track"
script = ExtResource( 3 )

[node name="Instrument_Selection" type="OptionButton" parent="Division/Sets/Div"]
margin_left = 839.0
margin_right = 1024.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
text = "Piano"
align = 1
items = [ "Piano", null, false, 0, null, "Flauta", null, false, 1, null, "Prog", null, false, 2, null, "Quadrada", null, false, 3, null, "Senoidal", null, false, 4, null, "Serra", null, false, 5, null, "Triangular", null, false, 6, null ]
selected = 0
script = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 256.0
margin_top = 136.0
margin_right = 768.0
margin_bottom = 436.0
access = 2
filters = PoolStringArray( ".wav" )
current_dir = "C:/Users/Usuario/Desktop/Sem Erros UP/Programas/GL Studio"
current_file = "My_Record.wav"
current_path = "C:/Users/Usuario/Desktop/Sem Erros UP/Programas/GL Studio/My_Record.wav"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="pressed" from="Division/DivH/Change_Screen_Button" to="Division/DivH/Change_Screen_Button" method="_on_Change_Screen_Button_pressed"]
[connection signal="toggled" from="Division/Sets/Div/Play_Button" to="Division/Sets/Div/Play_Button" method="_on_Play_Button_toggled"]
[connection signal="value_changed" from="Division/Sets/Div/Compass_Control" to="Division/Sets/Div/Compass_Control" method="_on_Compass_Control_value_changed"]
[connection signal="pressed" from="Division/Sets/Div/Record_Button" to="Division/Sets/Div/Record_Button" method="_on_Record_Button_pressed"]
[connection signal="pressed" from="Division/Sets/Div/Mute" to="Division/Sets/Div/Mute" method="_on_Mute_pressed"]
[connection signal="item_selected" from="Division/Sets/Div/Instrument_Selection" to="Division/Sets/Div/Instrument_Selection" method="_on_Instrument_Selection_item_selected"]
[connection signal="confirmed" from="FileDialog" to="Division/Sets/Div/Record_Button" method="_on_FileDialog_confirmed"]
